<resources>
    <string name="app_name" translatable="false">IBSYS Retail Manager</string>
    <string name="dashboard_activity_label">Tableau de bord</string>
    <string name="products_activity_label">Produits</string>
    <string name="users_activity_label">Utilisateurs</string>
    <string name="customers_activity_label">Clients</string>
    <string name="invoices_activity_label">Factures</string>
    <string name="open">Ouvrir</string>
    <string name="close">Fermer</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="login">Connexion</string>
    <string name="product_name">Nom du produit</string>
    <string name="add_new_product">Ajouter un nouveau produit</string>
    <string name="purchase_price">Prix d\'achat</string>
    <string name="barcode">Code-barres</string>
    <string name="tax_rate">Taux de taxe</string>
    <string name="password">Mot de passe</string>
    <string name="password_placeholder">secret-password</string>
    <string name="email">E-mail</string>
    <string name="selling_price">Prix de vente</string>
    <string name="address">Adresse</string>
    <string name="dialog_message">Message de la boîte de dialogue</string>
    <string name="dialog_title">Titre de la boîte de dialogue</string>
    <string name="copyright">© 2023 IBSYS SARL. Tous droits réservés.</string>
    <string name="modifying_user_email_warning">La modification de l\'adresse e-mail de l\'utilisateur actuel entraîne une déconnexion.</string>
    <string name="update_user">Mettre à jour l\'utilisateur</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom de famille</string>
    <string name="role">Rôle</string>
    <string name="customers">Clients</string>
    <string name="scanner">Scanner</string>
    <string name="orders">Commandes</string>
    <string name="past_30_days_sales">Ventes des 30 derniers jours</string>
    <string name="add_customer">Ajouter un client</string>
    <string name="there_are_currently_no_customers">Il n\'y a actuellement aucun client.</string>
    <string name="add_product">Ajouter un produit</string>
    <string name="there_are_currently_no_products">Il n\'y a actuellement aucun produit.</string>
    <string name="pause">Pause</string>
    <string name="resume">Reprendre</string>
    <string name="finish">Terminer</string>
    <string name="scan_products_effortlessly_with_your_device_for_swift_cart_additions">Scannez les produits facilement avec votre appareil pour des ajouts rapides au panier.</string>
    <string name="status_not_connected_to_any_cart">Statut : Pas connecté à un panier.</string>
    <string name="connect_your_cart">Connectez votre panier</string>
    <string name="or">---------------- OU ----------------</string>
    <string name="start_adding_items_to_this_cart">Commencez à ajouter des articles à ce panier</string>
    <string name="add_user">Ajouter un utilisateur</string>
    <string name="there_are_currently_no_users">Il n\'y a actuellement aucun utilisateur.</string>
    <string name="add_new_customer">Ajouter un nouveau client</string>
    <string name="customer_name">Nom du client</string>
    <string name="phone">Téléphone</string>
    <string name="add_new_user">Ajouter un nouvel utilisateur</string>
    <string name="dashboard">Tableau de bord</string>
    <string name="products">Produits</string>
    <string name="users">Utilisateurs</string>
    <string name="update">Mettre à jour</string>
    <string name="logout">Déconnexion</string>
    <string name="connect_scanner">Connecter le scanner</string>
</resources>