<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonsLayout"
        android:layout_alignParentTop="true"></com.journeyapps.barcodescanner.DecoratedBarcodeView>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pause"
            android:text="@string/pause" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resume"
            android:text="@string/resume" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:text="@string/finish" />
    </LinearLayout>

</RelativeLayout>