<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linear_layout_bg_color"
    android:contentDescription="@string/dashboard_activity_label"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="64dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:layout_margin="12dp"
                android:elevation="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.5"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/orders"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/totalOrdersTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="$0.00"
                            android:textColor="@color/purple_bg_color"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-12dp"
                        android:layout_weight="9"
                        android:orientation="horizontal">

                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/ordersChart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:visibility="gone" />

                        <ProgressBar
                            android:id="@+id/ordersProgressBar"
                            style="@style/Widget.AppCompat.ProgressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:indeterminate="true"
                            android:indeterminateTint="@color/purple_bg_color"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:layout_margin="12dp"
                android:elevation="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.5"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/customers"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/totalCustomersTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="0"
                            android:textColor="@color/purple_bg_color"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-12dp"
                        android:layout_weight="9"
                        android:orientation="horizontal">

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/customersChart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:visibility="gone" />

                        <ProgressBar
                            android:id="@+id/customersProgressBar"
                            style="@style/Widget.AppCompat.ProgressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:indeterminate="true"
                            android:indeterminateTint="@color/purple_bg_color"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:layout_margin="12dp"
                android:elevation="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.5"
                        android:orientation="horizontal"
                        android:paddingHorizontal="8dp"
                        android:weightSum="4">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/past_30_days_sales"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/totalMonthlySalesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="$0.00"
                            android:textColor="@color/purple_bg_color"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-12dp"
                        android:layout_weight="9"
                        android:orientation="horizontal">

                        <com.github.mikephil.charting.charts.BarChart
                            android:id="@+id/monthlySalesChart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:visibility="gone" />

                        <ProgressBar
                            android:id="@+id/monthlySalesProgressBar"
                            style="@style/Widget.AppCompat.ProgressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:indeterminate="true"
                            android:indeterminateTint="@color/purple_bg_color"
                            android:visibility="visible" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>